# spectral-localizer-boundary-time-crystal

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/fast/: fast_topological_domains.py  fast_topological_islands.py
analysis/standard/: eigenmode_delocalization.py  topological_domains.py  topological_islands.py
diagnostics/: kappa_sweep_complex_plane.py  vary_gamma_1d_scan.py  vary_kappa_1d_scan.py
notebooks/: spectral_localizer_notebook.ipynb
src/spectral_localizer/: __init__.py  btc_model.py  fast_localizer.py  kq_basis.py  mode_tools.py  standard_localizer.py
src/spectral_localizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
